button and word spacing fixes

--- a/style.css
+++ b/style.css
@@ -54,13 +54,15 @@ section{
 }
 
 .words h1{
-    font-size: 30px;
+    font-size: 40px;
     margin-bottom: 20px;
+    letter-spacing: 2px;
 }
 
 .words p{
     margin-bottom: 5px;
-    line-height: 1.8;
+    line-height: 1.6;
+    font-size: 20px;
 }
 
 #button{
@@ -73,6 +75,8 @@ display: inline-block;
 margin-bottom: 80px;
 margin-top: 30px;
 border-radius: 50px;
+box-shadow: 0px 0px 15px 2px rgb(61, 43, 92);
+
 }
 
 .social{
@@ -118,23 +122,29 @@ footer{
     .words{
         grid-row-start: 2;
         padding-left: 50px;
+        text-align: justify;
     }
 
     .contain2 {
         grid-row-start: 3;
         grid-column-start: 2;
     }
-
+    .buttoncontainer{
+        text-align: left;
+    }
     #button{
         text-decoration: none;
         color: hsl(257, 40%, 49%);
         background-color: white;
         padding: 15px;
-        width: 40%;
+        width: 35%;
         display: inline-block;
         margin-bottom: 80px;
         margin-top: 30px;
         border-radius: 50px;
+        text-align: center;
+        font-size: 20px;
+        box-shadow: 0px 0px 15px 2px rgb(61, 43, 92);
 
     }
     
